@@ -1,7 +1,9 @@
 package edu.dedupendnote.services;
 
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.Comparator;
+import java.util.HashMap;
 import java.util.HashSet;
 import java.util.LinkedHashMap;
 import java.util.List;
@@ -13,21 +15,15 @@ import java.util.regex.Pattern;
 import java.util.stream.Collectors;
 
 import org.apache.commons.text.similarity.JaroWinklerSimilarity;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.messaging.simp.SimpMessagingTemplate;
-import org.springframework.scheduling.annotation.Async;
-import org.springframework.scheduling.annotation.AsyncResult;
-import org.springframework.stereotype.Service;
-import org.springframework.util.concurrent.ListenableFuture;
-import org.springframework.web.context.annotation.SessionScope;
 
 import edu.dedupendnote.domain.Publication;
 import edu.dedupendnote.domain.StompMessage;
 import lombok.extern.slf4j.Slf4j;
 
 @Slf4j
-@Service
-@SessionScope
+// @Service
+//@SessionScope
 public class DeduplicationService {
 
 	public static class DefaultAuthorsComparator implements AuthorsComparator {
@@ -38,16 +34,15 @@ public class DeduplicationService {
 
 		public static final Double AUTHOR_SIMILARITY_REPLY_SUFFICIENT_STARTPAGES_OR_DOIS = 0.75;
 
-		private JaroWinklerSimilarity jws = new JaroWinklerSimilarity();
+		private static JaroWinklerSimilarity jws = new JaroWinklerSimilarity();
 
-		public Double similarity = 0.0;
+		private Double similarity = 0.0;
 
 		/*
 		 * See AuthorVariantsExperimentsTest for possible enhancements.
 		 */
 		@Override
 		public boolean compare(Publication r1, Publication r2) {
-			// log.error("Using the default AuthorComparator");
 			similarity = 0.0;
 			boolean isReply = r1.isReply() || r2.isReply();
 			boolean sufficientStartPages = r1.getPageForComparison() != null && r2.getPageForComparison() != null;
@@ -60,7 +55,7 @@ public class DeduplicationService {
 				// Because Anonymous AND no SP or DOI would only compare on title and
 				// journals (see "Abstracts of 16th National Congress of SIGENP" articles
 				// in Joost problem set)
-				if (isReply || !sufficientStartPages && !sufficientDois) {
+				if (isReply || (!sufficientStartPages && !sufficientDois)) {
 					return false;
 				}
 				return true;
@@ -111,7 +106,7 @@ public class DeduplicationService {
 	protected AuthorsComparator authorsComparator;
 
 	// the DOIs have been lowercased
-	private Pattern cochraneIdentifierPattern = Pattern.compile("^.*10.1002/14651858.([a-z][a-z][0-9]+).*",
+	private static Pattern cochraneIdentifierPattern = Pattern.compile("^.*10.1002/14651858.([a-z][a-z]\\d+).*",
 			Pattern.CASE_INSENSITIVE);
 
 	private IOService ioService;
@@ -170,12 +165,18 @@ public class DeduplicationService {
 	 *  If the label starts with "-", it is a duplicate from a record from the OLD input file.
 	 */
 	// @formatter:on
-	@Autowired
+//	@Autowired
 	private SimpMessagingTemplate simpMessagingTemplate;
 
 	public DeduplicationService() {
 		this.authorsComparator = new DefaultAuthorsComparator();
 		this.ioService = new IOService();
+	}
+
+	public DeduplicationService(SimpMessagingTemplate simpMessagingTemplate) {
+		this.authorsComparator = new DefaultAuthorsComparator();
+		this.ioService = new IOService();
+		this.simpMessagingTemplate = simpMessagingTemplate;
 	}
 
 	public DeduplicationService(AuthorsComparator authorsComparator) {
@@ -184,21 +185,18 @@ public class DeduplicationService {
 	}
 
 	public boolean compareIssns(Publication r1, Publication r2) {
-		return listsContainSameString(r1.getIssns(), r2.getIssns());
+		return setsContainSameString(r1.getIssns(), r2.getIssns());
 	}
 
 	// @formatter:off
-	/*
+	/**
 	 * compareJournals
 	 *
 	 * Paths not chosen:
-	 * - Creation of sets of journalPatterns for the whole set of
-	 * records. This might be overkill, since the comparison by journal is the last
-	 * of all comparisons between any two records
-	 * - "AJR American Journal of Radiology": split into "AJR" and
-	 * "American Journal of Radiology"
-	 * compareJournals_FirstWithStartingInitialism(...) will create a pattern on A,
-	 * J en R which will find the second title.
+	 * - Creation of sets of journalPatterns for the whole set of records. This might be overkill, since the comparison by journal is the last
+	 *   of all comparisons between any two records
+	 * - "AJR American Journal of Radiology": split into "AJR" and "American Journal of Radiology"
+	 *   compareJournals_FirstWithStartingInitialism(...) will create a pattern on A, J en R which will find the second title.
 	 */
 	// @formatter:on
 	public boolean compareJournals(Publication r1, Publication r2) {
@@ -207,27 +205,27 @@ public class DeduplicationService {
 		boolean isReply = r1.isReply() || r2.isReply();
 
 		if (set1.isEmpty() || set2.isEmpty()) {
-			log.debug("One of the records had no journal for '{}' and '{}'", set1, set2);
+			// log.debug("One of the records had no journal for '{}' and '{}'", set1, set2);
 			return false;
 		}
 
 		Set<String> commonJournals = new HashSet<>(set1);
 		commonJournals.retainAll(set2);
 		if (!commonJournals.isEmpty()) {
-			log.debug("Some journals are common: '{}' and '{}'", set1, set2);
+			// log.debug("Some journals are common: '{}' and '{}'", set1, set2);
 			return true;
 		}
 
 		for (String s1 : set1) {
 			for (String s2 : set2) {
-				if (s1.startsWith("http") && s2.startsWith("http") && !s1.equals(s2)) {
+				if (s1.startsWith("http") && s2.startsWith("http") && ! s1.equals(s2)) {
 					// JaroWinkler 0.9670930232558139 for
 					// 'Https://clinicaltrials.gov/show/nct00830466'
 					// and 'Https://clinicaltrials.gov/show/nct00667472'
 					continue;
 				}
 				Double similarity = jws.apply(s1.toLowerCase(), s2.toLowerCase());
-				log.debug("Similarity: {} for '{}' and '{}'", similarity, s1, s2);
+				// log.debug("Similarity: {} for '{}' and '{}'", similarity, s1, s2);
 				// Make comparison stricter for Reply-titles because titles haven't been
 				// compared ("Annals of Hepatology" - "Annals of Oncology": 0.916)
 				if (isReply && similarity > JOURNAL_SIMILARITY_REPLY) {
@@ -243,6 +241,7 @@ public class DeduplicationService {
 				/*
 				 * "Hepatology" and "Hepatology International" are considered the same
 				 */
+				// FIXME: the 3 following functions should first compare s1 - s2 and, if false, then s2 - s1
 				if (compareJournals_FirstAsAbbreviation(s1, s2)) {
 					return true;
 				}
@@ -251,7 +250,7 @@ public class DeduplicationService {
 				}
 				/*
 				 * Journals with very long titles produce very long Patterns: limit these cases
-				 * to short journal names ASySD SRS_Human has journal names in uppercase
+				 * to short journal names. ASySD SRS_Human has journal names in uppercase
 				 */
 				if (s1.length() < 10 && s1.toUpperCase().equals(s1) && compareJournals_FirstAsInitialism(s1, s2)) {
 					return true;
@@ -268,17 +267,17 @@ public class DeduplicationService {
 				}
 			}
 		}
-		log.debug("No Success 5 for '{}' and '{}'", set1, set2);
+		// log.debug("No Success 5 for '{}' and '{}'", set1, set2);
 		return false;
 	}
 
 	// Searching 'Ann Fr Anesth Reanim' as "\bAnn.*\bFr.*\bAnesth.*\bReanim.*"
 	private boolean compareJournals_FirstAsAbbreviation(String j1, String j2) {
-		Pattern pattern = Pattern.compile("\\b" + j1.replaceAll(" ", ".*\\\\b") + ".*", Pattern.CASE_INSENSITIVE);
-		log.debug("Pattern ABBREVIATION for '{}': {} for '{}'", j1, pattern.toString(), j2);
+		Pattern pattern = Pattern.compile("\\b" + j1.replaceAll("\\s", ".*\\\\b") + ".*", Pattern.CASE_INSENSITIVE);
+		// log.debug("Pattern ABBREVIATION for '{}': {} for '{}'", j1, pattern.toString(), j2);
 		Matcher matcher = pattern.matcher(j2);
 		if (matcher.find()) {
-			log.debug("Pattern ABBREVIATION found for '{}': {} for '{}'", j1, pattern.toString(), j2);
+			// log.debug("Pattern ABBREVIATION found for '{}': {} for '{}'", j1, pattern.toString(), j2);
 			return true;
 		}
 		return false;
@@ -289,10 +288,10 @@ public class DeduplicationService {
 		String patternString = s1.chars().mapToObj(c -> String.valueOf((char) c))
 				.collect(Collectors.joining(".*\\b", "\\b", ".*"));
 		Pattern patternShort2 = Pattern.compile(patternString, Pattern.CASE_INSENSITIVE);
-		log.debug("Pattern INITIALISM for '{}': {} for '{}'", s1, patternShort2.toString(), s2);
+		// log.debug("Pattern INITIALISM for '{}': {} for '{}'", s1, patternShort2.toString(), s2);
 		Matcher matcher = patternShort2.matcher(s2);
 		if (matcher.find()) {
-			log.debug("Pattern INITIALISM found for '{}': {} for '{}'", s1, patternShort2.toString(), s2);
+			// log.debug("Pattern INITIALISM found for '{}': {} for '{}'", s1, patternShort2.toString(), s2);
 			return true;
 		}
 		return false;
@@ -318,10 +317,10 @@ public class DeduplicationService {
 			String patternString = words[0].chars().mapToObj(c -> String.valueOf((char) c))
 					.collect(Collectors.joining(".*\\b", "\\b", ".*"));
 			Pattern patternShort3 = Pattern.compile(patternString, Pattern.CASE_INSENSITIVE);
-			log.debug("Pattern STARTING_INITIALISM for '{}': {} for '{}'", s1, patternShort3.toString(), s2);
+			// log.debug("Pattern STARTING_INITIALISM for '{}': {} for '{}'", s1, patternShort3.toString(), s2);
 			Matcher matcher = patternShort3.matcher(s2);
 			if (matcher.find()) {
-				log.debug("Pattern STARTING_INITIALISM found for '{}': {} for '{}'", s1, patternShort3.toString(), s2);
+				// log.debug("Pattern STARTING_INITIALISM found for '{}': {} for '{}'", s1, patternShort3.toString(), s2);
 				return true;
 			}
 		}
@@ -329,163 +328,130 @@ public class DeduplicationService {
 	}
 
 	public void compareSet(List<Publication> publications, Integer year, boolean descending, String wssessionId) {
-		int listSize = publications.size();
-		int doubleSize = 0;
+		int noOfPublications = publications.size(); 
+		int noOfDuplicates = 0;
+		Map<String,Boolean> map = new HashMap<>(Map.of("sameDois", false));
+		
 		while (publications.size() > 1) {
+			// In log messages this publication is called the pivot
 			Publication publication = publications.remove(0);
 			/*
-			 * FIXME: overly complex: shouldn't it be: if (record.getPublicationYear() !=
-			 * year) break;
+			 * If descending / OneFile mode: only records of year1 should be compared to records of year1 and year2.
+			 * The records of year2 will be compared in the next pair of years.
+			 * If ascending / TwoFile mode: publicationYear 0 records are at the head of the publicationList!
 			 */
-			if (descending && publication.getPublicationYear() < year) {
-				break; // only records of year1 should be compared to records of year1 and
-						// year2, The records of year2 will be compared in the next pair
-						// of years.
-			}
-			if (!descending && publication.getPublicationYear() != 0 && publication.getPublicationYear() > year) {
-				// FIXME: why "record.getPublicationYear() != 0" only in ascending case?
+			if ((descending && publication.getPublicationYear() < year)
+				|| (!descending && publication.getPublicationYear() != 0 && publication.getPublicationYear() > year)) {
 				break;
 			}
-			log.debug("Comparing " + publications.size() + " records to: " + publication.getId() + " : "
-					+ publication.getTitles().get(0));
-			// FIXME? Shouldn't use functional style because it is impure
-			List<Publication> doubles = publications.stream()
-					.filter(r -> compareStartPageOrDoi(r, publication) && authorsComparator.compare(r, publication)
-							&& compareTitles(r, publication)
-							&& (compareIssns(r, publication) || compareJournals(r, publication)))
-					.map(r -> { // Label is used later in enrich() to recreate the duplicate
-								// lists, and is used / exported if markMode is set
-						// If the record was already a duplicate, use its label the new
-						// duplicates found, otherwise its ID
-						if (r.getLabel() == null) {
-							if (publication.getLabel() != null) {
-								log.debug(
-										"==> SETTING LABEL ALREADY PRESENT: {} has label {} and now sets label of duplicate to {}",
-										publication.getId(), publication.getLabel(), r.getId());
-								r.setLabel(publication.getLabel());
-							} else {
-								r.setLabel(publication.getId());
-								publication.setLabel(publication.getId());
-							}
-						} else {
-							// log.debug("==> LABEL ALREADY PRESENT: {} has label {} and
-							// should also get label {}", r.getId(), r.getLabel(),
-							// record.getId());
-							if (publication.getLabel() == null) {
-								publication.setLabel(r.getLabel());
-							}
-							if (!r.getLabel().equals(publication.getLabel())) {
-								log.error("Records have different labels: {}, {}\n- {}\n- {}", publication.getLabel(),
-										r.getLabel(), publication, r);
-							}
-						}
-						if (r.isReply()) {
-							publication.setReply(true);
-						}
-						log.debug("1. setting label {} to record {}", r.getLabel(), r.getId());
-						return r;
-					}).collect(Collectors.toList());
-			if (!doubles.isEmpty()) {
-				// @formatter:off
-				/*
-				 * The duplicates (doubles) are removed from the current set. Some duplicates may be missed by this action!!!
-				 * e.g.:
-				 * - record 1: page 63  + doi 10.4081/hr.2015.5927
-				 * - record 2: page 519 + doi 10.4081/hr.2015.5927	==> duplicate because of doi
-				 * - record 3: page 519 + doi (empty)				==> not a duplicate because 63 != 519
-				 * Not removing the duplicates would have serious performance problems, AND would make adding the labels more complex.
-				 *
-				 * TODO: Wouldn't this be solved if, whenever a duplicate is found,
-				 * - DOIs from the duplicate found were added to the first record
-				 * - the same for journal titles?
-				 * - the same for titles???
-				 */
-				// @formatter:on
-				// FIXME: removing the doubles makes the program faster (and less
-				// complicated)
-				// but misses duplicates when the not first duplicate is sufficiently
-				// close to the following records, but the first one is not?
-				// See test set: Author Bail, JP ...
-				// records.removeAll(doubles); // no need to compare the doubles later on
-				// in this list
-				// This could be set in the map (higher), but then would be set for each
-				// duplicate found
+			// log.debug("Comparing {} publications to pivot {}: {}", publications.size(), publication.getId(), publication.getTitles().get(0));
+			
+			for (Publication r : publications) {
+				map.put("sameDois", false);
+				if (   compareStartPageOrDoi(r, publication, map) 
+					&& authorsComparator.compare(r, publication)
+					&& compareTitles(r, publication)
+					&& (map.get("sameDois") || compareIssns(r, publication) || compareJournals(r, publication))) {
 
-				// TODO: this is commented out because in map(...) the label for record is
-				// set if it was empty. Safe to remove?
-				// if (record.getLabel() == null) {
-				// record.setLabel(record.getId());
-				// log.debug("2. setting label {} to record {}", record.getLabel(),
-				// record.getId());
-				// }
-				doubleSize += doubles.size();
-				wsMessage(wssessionId,
-						"Working on " + year + " for " + listSize + " records (marked " + doubleSize + " duplicates)");
+					noOfDuplicates++;
+					// set the label
+					if (publication.getLabel() != null) {
+						// log.debug("=== pub {} gets label {} from pivot {}", r.getId(), publication.getLabel(), publication.getId());
+						r.setLabel(publication.getLabel());
+					} else if (r.getLabel() != null) {
+						/** 
+						 * Labels can be promoted from a publication to the pivot without a label:
+						 * - in loop N with pivot V 
+						 *   - publication W is NOT seen as similar and gets no label
+						 *   - publication X is seen as similar and gets V as label
+						 * - in loop N + 1 with pivot W
+						 *   - publication X is seen as similar and its label V is promoted to label of pivot W
+						 * 
+						 *   	V		W			X			
+						 * SP	1-26	291-316		(None)		
+						 * DOI	+		+			+
+						 * 
+						 * Loop N (V)
+						 * - W.SP != V.SP	 -> W.label = NULL	
+						 * - X.DOI = V.DOI	 -> X.label = V
+						 * Loop N + 1 (W)
+						 * - W.DOi = X.DOI	 -> W.lavel = X
+						 * 
+						 * Another reason can be that pivot W has more journal name variants than pivot V 
+						 */
+						// log.debug("=== pub {} SETs label {} in pivot {}", r.getId(), r.getLabel(), publication.getId());
+						publication.setLabel(r.getLabel());
+					} else {
+						// log.debug("=== Both pivot {} and pub {} get label {} from the recordId of the pivot {}", publication.getId(), r.getId(), publication.getId(), publication.getId());
+						publication.setLabel(publication.getId());
+						r.setLabel(publication.getId());
+					}
+
+					if (r.isReply()) {
+						publication.setReply(true);
+					}
+				}
 			}
+			wsMessage(wssessionId, "Working on %d for %d records (marked %d duplicates)".formatted(year, noOfPublications, noOfDuplicates));
 		}
 	}
 
 	/*
 	 * Comparing starting page before DOI may be faster than the other way around.
 	 * But: a complete set of conference abstracts has the same DOI. So starting
-	 * page MUST be compared before DOI.
-	 *
-	 * Exception: Cochrane Reviews. See the comment at {@link
-	 * edu.dedupendnote.domain.Publication#isCochrane Publication#isCochrane}
+	 * page MUST be compared before DOI, except for Cochrane Reviews.
+	 * See the comment at {@link edu.dedupendnote.domain.Publication#isCochrane}
 	 */
-	public boolean compareStartPageOrDoi(Publication r1, Publication r2) {
-		log.debug("Comparing " + r1.getId() + ": " + r1.getPageForComparison() + " to " + r2.getId() + ": "
-				+ r2.getPageForComparison());
-//		Map<String, Integer> dois1 = r1.getDois();
-//		Map<String, Integer> dois2 = r2.getDois();
-		List<String> dois1 = new ArrayList<>(r1.getDois().keySet());
-		List<String> dois2 = new ArrayList<>(r2.getDois().keySet());
+	public boolean compareStartPageOrDoi(Publication r1, Publication r2, Map<String, Boolean> map) {
+		// log.debug("Comparing {}: {} to {}: {}", r1.getId(), r1.getPageForComparison(), r2.getId(), r2.getPageForComparison());
+		Set<String> dois1 = r1.getDois();
+		Set<String> dois2 = r2.getDois();
 		boolean bothCochrane = r1.isCochrane() && r2.isCochrane();
 		boolean sufficientStartPages = r1.getPageForComparison() != null && r2.getPageForComparison() != null;
 		boolean sufficientDois = !dois1.isEmpty() && !dois2.isEmpty();
 
-		if (!sufficientStartPages && !sufficientDois) {
-			log.debug("At least one starting page AND at least one DOI are missing");
+		if (!bothCochrane && !sufficientStartPages && !sufficientDois) {
+			// log.debug("At least one starting page AND at least one DOI are missing");
 			return true; // no useful comparison possible
 		}
 
 		if (bothCochrane) {
 			if (r1.getPublicationYear().equals(r2.getPublicationYear())) {
 				if (sufficientDois) {
-					if (listsContainSameString(dois1, dois2)) {
-						return true;
-					}
+					return setsContainSameString(dois1, dois2);
 				} else if (sufficientStartPages && r1.getPageForComparison().equals(r2.getPageForComparison())) {
-					log.debug("Same starting pages");
+					// log.debug("Same starting pages");
 					return true;
 				}
 			}
-		} else /*
-				 * 20230220: Changed from 2 independent IFs to "IF(...) ELSE IF (!... AND ...)
-				 * FROM: Records with different starting pages were also compared for DOIs TO:
-				 * only 1 of (compare pages, compare DOIs)
-				 *
-				 * Results are higher FN (1169 --> 1311: +142 / 112%) , but (more importantly)
-				 * lower FP (41 --> 34: -7 / 83%)
-				 */
+			return false;
+		}
+		if (sufficientDois && setsContainSameString(dois1, dois2)) {
+			map.put("sameDois", true);
+		}
 		if (sufficientStartPages && r1.getPageForComparison().equals(r2.getPageForComparison())) {
-			log.debug("Same starting pages");
+			// log.debug("Same starting pages");
 			return true;
-		} else if (!sufficientStartPages && sufficientDois && listsContainSameString(dois1, dois2)) {
+		} else if (!sufficientStartPages && sufficientDois && setsContainSameString(dois1, dois2)) {
 			return true;
 		}
-		log.debug("Starting pages and DOIs are different");
+
+		// log.debug("Starting pages and DOIs are different");
 		return false;
 	}
 
-	// All unique titles and their reverse are compared
+	/** 
+	 * All unique titles and their reverse are compared
+	 * 
+	 * Paths not chosen:
+	 * - start with setContainsSameString(titleSet1, titleSet2): @see <a href="https://github.com/globbestael/DedupEndNote/issues/20">GitHub issues</a>  
+	 */
 	public boolean compareTitles(Publication r1, Publication r2) {
-		log.debug("Comparing " + r1.getId() + ": " + r1.getTitles().get(0) + "\nto " + r2.getId() + ": "
-				+ r2.getTitles().get(0));
+		// log.debug("Comparing {}: {}\nto {}: {}", r1.getId(), r1.getTitles().get(0), r2.getId(), r2.getTitles().get(0));
 		if (r1.isReply() || r2.isReply()) {
 			return true;
 		}
-		Double similarity = 0.0;
+		Double similarity;
 		List<String> titles1 = r1.getTitles();
 		List<String> titles2 = r2.getTitles();
 		boolean sufficientStartPages = r1.getPageForComparison() != null && r2.getPageForComparison() != null;
@@ -495,15 +461,13 @@ public class DeduplicationService {
 		for (String title1 : titles1) {
 			for (String title2 : titles2) {
 				similarity = jws.apply(title1, title2);
-				if (isPhase) { // return result of comparison of only the first title
-								// variant
-					log.debug("{} and {}:\n- {}\n- {}", r1.getId(), r2.getId(), title1, title2);
+				if (isPhase) { // return result of comparison of only the first title variant
+					// log.debug("{} and {}:\n- {}\n- {}", r1.getId(), r2.getId(), title1, title2);
 					return similarity > TITLE_SIMILARITY_PHASE;
 				}
 				if ((sufficientStartPages || sufficientDois)
 						&& similarity > TITLE_SIMILARITY_SUFFICIENT_STARTPAGES_OR_DOIS) {
-					log.debug("Found comparable title (with pages or DOI) " + r1.getTitles().get(0) + " == "
-							+ r2.getTitles().get(0));
+					// log.debug("Found comparable title (with pages or DOI) {} == {}", r1.getTitles().get(0), r2.getTitles().get(0));
 					return true;
 				}
 				if (!(sufficientStartPages || sufficientDois)) {
@@ -526,9 +490,7 @@ public class DeduplicationService {
 		return publications.stream().filter(r -> r.getId() == null).count() > 0L;
 	}
 
-	public String deduplicateOneFile(String inputFileName, String outputFileName, boolean markMode,
-			String wssessionId) {
-		// this.session = session;
+	public String deduplicateOneFile(String inputFileName, String outputFileName, boolean markMode, String wssessionId) {
 		wsMessage(wssessionId, "Reading file " + inputFileName);
 		List<Publication> publications = ioService.readPublications(inputFileName);
 
@@ -559,18 +521,8 @@ public class DeduplicationService {
 		return s;
 	}
 
-	// split into deduplicateOneFileAsync(...) and duplicateOneFile(...) for
-	// testability
-	@Async
-	public ListenableFuture<String> deduplicateOneFileAsync(String inputFileName, String outputFileName,
-			boolean markMode, String wssessionId) {
-		String s = deduplicateOneFile(inputFileName, outputFileName, markMode, wssessionId);
-		return new AsyncResult<>(s);
-	}
-
 	public String deduplicateTwoFiles(String newInputFileName, String oldInputFileName, String outputFileName,
 			boolean markMode, String wssessionId) {
-		// this.session = session;
 		// read the old records and mark them as present, then add the new records
 		log.info("oldInputFileName: {}", oldInputFileName);
 		log.info("newInputFileName: {}", newInputFileName);
@@ -582,16 +534,14 @@ public class DeduplicationService {
 			return s;
 		}
 
+		// Put "-" before the IDs of the old records. In this way the labels of the records (used for 
+		// identifying duplicate records) will be unique over both lists.
+		// When writing the deduplicated records for the second list, records with label "-..." can 
+		// be skipped because they are duplicates of records from the first list.
+		// When markMode is set, these records are written. 
+		// Because of this "-", the records which have duplicates in the first file (label = "-...")
+		// can be distinguished from records which have duplicates in the second file.
 		publications.forEach(r -> {
-			// Put "-" before the IDs of the old records. In this way the labels of the
-			// records (used for identifying duplicate records) will be unique over both
-			// lists.
-			// When writing the deduplicated records for the second list, records with
-			// label "-..." can be skipped
-			// because they are duplicates of records from the first list.
-			// When markMode is set, these records are written. Because of this "-", the
-			// records which have duplicates in the first file (label = "-...")
-			// can be distinguished from records which have duplicates in the second file.
 			r.setId("-" + r.getId());
 			r.setPresentInOldFile(true);
 		});
@@ -609,49 +559,40 @@ public class DeduplicationService {
 
 		if (markMode) { // no enrich(), and add / overwrite LB (label) field
 			int numberWritten = ioService.writeMarkedRecords(publications, newInputFileName, outputFileName);
-			long labeledRecords = publications.stream().filter(r -> r.getLabel() != null && !r.isPresentInOldFile())
+			long numberLabeledRecords = publications.stream()
+					.filter(r -> r.getLabel() != null && !r.isPresentInOldFile())
 					.count();
-			s = "DONE: DedupEndNote has written " + numberWritten + " records with " + labeledRecords
-					+ " duplicates marked in the Label field.";
+			s = "DONE: DedupEndNote has written %s records with %d duplicates marked in the Label field."
+					.formatted(numberWritten, numberLabeledRecords);
 			wsMessage(wssessionId, s);
 			return s;
 		}
 
 		enrich(publications);
-		// Get the records from the new file that are not duplicates or not duplicates
-		// of records of the old file
+		// Get the records from the new file that are not duplicates or not duplicates of records of the old file
 		List<Publication> filteredRecords = publications.stream()
 				.filter(r -> !r.isPresentInOldFile() && (r.getLabel() == null || !r.getLabel().startsWith("-")))
-				.collect(Collectors.toList());
+				.toList();
 		log.error("Records to write: {}", filteredRecords.size());
 		int numberWritten = ioService.writeDeduplicatedRecords(filteredRecords, newInputFileName, outputFileName);
-		s = "DONE: DedupEndNote removed " + (newRecords.size() - numberWritten)
-				+ " records from the new set, and has written " + numberWritten + " records.";
+		s = "DONE: DedupEndNote removed %d records from the new set, and has written %d records."
+				.formatted((newRecords.size() - numberWritten), numberWritten);
 		wsMessage(wssessionId, s);
 		return s;
-	}
-
-	// split into deduplicateTwoFilesAsync(...) and duplicateTwoFiles(...) for
-	// testability
-	@Async
-	public ListenableFuture<String> deduplicateTwoFilesAsync(String newInputFileName, String oldInputFileName,
-			String outputFileName, boolean markMode, String wssessionId) {
-		String s = deduplicateTwoFiles(newInputFileName, oldInputFileName, outputFileName, markMode, wssessionId);
-		return new AsyncResult<>(s);
 	}
 
 	public String doSanityChecks(List<Publication> publications, String fileName) {
 		if (containsRecordsWithoutId(publications)) {
 			return "ERROR: The input file " + fileName
-					+ " contains records without IDs. The input file is not a dump from an EndNote library!";
+					+ " contains records without IDs. The input file is not an Export as RIS-file from an EndNote library!";
 		}
 		if (containsOnlyRecordsWithoutPublicationYear(publications)) {
 			return "ERROR: All records of the input file " + fileName
-					+ " have no Publication Year. The input file is not a dump from an EndNote library!";
+					+ " have no Publication Year. The input file is not an Export as RIS-file from an EndNote library!";
 		}
 		if (containsDuplicateIds(publications)) {
 			return "ERROR: The IDs of the records of input file " + fileName
-					+ " are not unique. The input file is not a dump from 1 EndNote library!";
+					+ " are not unique. The input file is not an Export as RIS-file from 1 EndNote library!";
 		}
 		return null;
 	}
@@ -663,15 +604,14 @@ public class DeduplicationService {
 				// when comparing 2 files, duplicates from the old file start with "-"
 				.filter(r -> r.getLabel() != null && !r.getLabel().startsWith("-"))
 				.collect(Collectors.groupingBy(Publication::getLabel));
-		log.debug("Number of duplicate lists {}, en IDs of kept records: {}", labelMap.size(), labelMap.keySet());
+		log.debug("Number of duplicate lists {}, and IDs of kept records: {}", labelMap.size(), labelMap.keySet());
 		List<Publication> recordList;
 		if (labelMap.size() > 0) {
-			for (String l : labelMap.keySet()) {
-				recordList = labelMap.get(l);
+			for (Map.Entry<String,List<Publication>> entry : labelMap.entrySet()) {
+				recordList = entry.getValue();
 				Publication recordToKeep = recordList.remove(0);
 				log.debug("Kept: {}: {}", recordToKeep.getId(), recordToKeep.getTitles().get(0));
-				// Don't set keptRecord in compareSet(): trouble when multiple duplicates
-				// and no publication year
+				// Don't set keptRecord in compareSet(): trouble when multiple duplicates and no publication year
 				recordList.stream().forEach(r -> r.setKeptRecord(false));
 
 				// Reply: replace the title with the longest title from the duplicates
@@ -692,14 +632,12 @@ public class DeduplicationService {
 				}
 
 				// Gather all the DOIs
-				final Map<String, Integer> dois = recordToKeep.getDois();
-				// FIXME: impure (function changes external value). Change will be easier
-				// when record.dois is a Set
-				recordList.stream().forEach(r -> {
-					if (!r.getDois().isEmpty()) {
-						r.getDois().forEach((k, v) -> dois.putIfAbsent(k, v));
+				final Set<String> dois = recordToKeep.getDois();
+				for (Publication p : recordList) {
+					if (!p.getDois().isEmpty()) {
+						dois.addAll(p.getDois());
 					}
-				});
+				}
 				if (!dois.isEmpty()) {
 					recordToKeep.setDois(dois);
 				}
@@ -713,40 +651,7 @@ public class DeduplicationService {
 
 				// Cochrane records with duplicates
 				if (recordToKeep.isCochrane()) {
-					String pageStart = recordToKeep.getPageStart();
-					if (pageStart != null) {
-						pageStart = pageStart.toUpperCase();
-					}
-					if (pageStart != null
-							&& !(pageStart.startsWith("C") || pageStart.startsWith("E") || pageStart.startsWith("M"))) {
-						pageStart = null;
-					}
-
-					if (pageStart == null) {
-						log.debug("Reached Cochrane record without pageStart: {}", recordToKeep.getAuthors());
-						for (Publication r : recordList) {
-							if (r.getPageStart() != null && r.getPageStart().toUpperCase().startsWith("C")) {
-								pageStart = r.getPageStart();
-								break;
-							}
-						}
-					}
-
-					if (pageStart == null) {
-						log.debug("Reached Cochrane record without pageStart, getting it from the DOIs: {}",
-								recordToKeep.getAuthors());
-						if (!recordToKeep.getDois().isEmpty()) {
-							String doi = recordToKeep.getDois().keySet().stream().collect(Collectors.toList()).get(0);
-							Matcher matcher = cochraneIdentifierPattern.matcher(doi);
-							if (matcher.matches()) {
-								pageStart = matcher.group(1);
-							}
-						}
-					}
-
-					if (pageStart != null) {
-						recordToKeep.setPageStart(pageStart.toUpperCase());
-					}
+					replaceCochranePageStart(recordToKeep, recordList);
 				}
 
 				// Add missing startpages (and endpages)
@@ -766,37 +671,46 @@ public class DeduplicationService {
 			}
 		}
 
-		// Then the records without duplicates
-		List<Publication> cochraneRecords = publications.stream().filter(r -> r.getLabel() == null && r.isCochrane())
-				.collect(Collectors.toList());
-		for (Publication r : cochraneRecords) {
-			String pageStart = r.getPageStart();
-			if (pageStart != null) {
-				pageStart = pageStart.toUpperCase();
-			}
-			if (pageStart != null
-					&& !(pageStart.startsWith("C") || pageStart.startsWith("E") || pageStart.startsWith("M"))) {
-				pageStart = null;
-			}
-
-			if (pageStart == null) {
-				log.debug("Reached unique Cochrane record without pageStart, getting it from the DOIs: {}",
-						r.getAuthors());
-				if (!r.getDois().isEmpty()) {
-					String doi = r.getDois().keySet().stream().collect(Collectors.toList()).get(0);
-					Matcher matcher = cochraneIdentifierPattern.matcher(doi);
-					if (matcher.matches()) {
-						pageStart = matcher.group(1);
-					}
-				}
-			}
-
-			if (pageStart != null) {
-				r.setPageStart(pageStart.toUpperCase());
+		// Then the Cochrane records without duplicates
+		for (Publication r : publications) {
+			if (r.isCochrane() && r.getLabel() == null) {
+				replaceCochranePageStart(r, Collections.emptyList());
 			}
 		}
 
 		log.debug("Finished enrich");
+	}
+
+	private void replaceCochranePageStart(Publication recordToKeep, List<Publication> duplicates) {
+		String pageStart = recordToKeep.getPageStart();
+		if (pageStart != null) {
+			pageStart = pageStart.toUpperCase();
+			// C: cochrane reviews nd protocols, E: editorials, M: ???
+			if ( ! (pageStart.startsWith("C") || pageStart.startsWith("E") || pageStart.startsWith("M"))) {
+				pageStart = null;
+			}
+		}
+
+		if (pageStart == null) {
+			log.debug("Reached Cochrane record without pageStart, getting it from pageStart of the duplicates: {}", recordToKeep.getAuthors());
+			for (Publication r : duplicates) {
+				if (r.getPageStart() != null && r.getPageStart().toUpperCase().matches("^[CEM].+")) {
+					recordToKeep.setPageStart(r.getPageStart().toUpperCase());
+					return;
+				}
+			}
+			log.debug("Reached Cochrane record without pageStart, getting it from the DOIs: {}", recordToKeep.getAuthors());
+			for (String doi : recordToKeep.getDois()) {
+				Matcher matcher = cochraneIdentifierPattern.matcher(doi);
+				if (matcher.matches()) {
+					pageStart = matcher.group(1);
+					break;
+				}
+			}
+		}
+		if (pageStart != null) {
+			recordToKeep.setPageStart(pageStart.toUpperCase());
+		}
 	}
 
 	public String formatResultString(int total, int totalWritten) {
@@ -809,12 +723,22 @@ public class DeduplicationService {
 	}
 
 	// FIXME: is Apache Commons CollectionUtils better?
-	private boolean listsContainSameString(List<String> list1, List<String> list2) {
-		if (list1.isEmpty() || list2.isEmpty()) {
+//	private boolean listsContainSameString(List<String> list1, List<String> list2) {
+//		if (list1.isEmpty() || list2.isEmpty()) {
+//			return false;
+//		}
+//		List<String> common = new ArrayList<>(list1);
+//		common.retainAll(list2);
+//		return !common.isEmpty();
+//	}
+
+	// FIXME: is Apache Commons CollectionUtils or Spring CollectionUtils better?
+	private boolean setsContainSameString(Set<String> set1, Set<String> set2) {
+		if (set1.isEmpty() || set2.isEmpty()) {
 			return false;
 		}
-		List<String> common = new ArrayList<>(list1);
-		common.retainAll(list2);
+		Set<String> common = new HashSet<>(set1);
+		common.retainAll(set2);
 		return !common.isEmpty();
 	}
 
@@ -833,32 +757,20 @@ public class DeduplicationService {
 				.collect(Collectors.groupingBy(Publication::getPublicationYear, TreeMap::new, Collectors.toList()))
 				.descendingMap();
 
-		Map<Integer, Integer> cumulativePercentages = new LinkedHashMap<>();
-		int current = 0;
-		Integer total = publications.size();
-		for (Integer year : yearSets.keySet()) {
-			Integer simple = yearSets.get(year).size();
-			cumulativePercentages.put(year, 100 * (simple + current) / total);
-			current += simple;
-		}
-		// log.error("cumulativePercentages: " + cumulativePercentages);
+		Map<Integer, Integer> cumulativePercentages = getCumulativePercentages(publications, yearSets);
 
 		List<Publication> emptyYearlist = yearSets.remove(0);
-		log.debug("YearSets: {}", yearSets.keySet().stream().sorted().collect(Collectors.toList()));
-		yearSets.keySet().stream().sorted(Comparator.reverseOrder()).forEach(year -> {
+		log.debug("YearSets: {}", yearSets.keySet().stream().sorted().toList());
+		yearSets.keySet().stream().forEach(year -> {
 			List<Publication> yearSet = yearSets.get(year);
 			if (emptyYearlist != null) {
-				yearSet.addAll(emptyYearlist.stream().filter(r -> r.getLabel() == null).collect(Collectors.toList()));
+				yearSet.addAll(emptyYearlist.stream().filter(r -> r.getLabel() == null).toList());
 			}
-			List<Publication> previousYearSet = yearSets.get(year - 1);
-			if (previousYearSet != null) {
-				yearSet.addAll(previousYearSet);
-			}
+			yearSet.addAll(yearSets.getOrDefault(year - 1, Collections.emptyList()));
 			wsMessage(wssessionId, "Working on " + year + " for " + yearSet.size() + " records");
 			compareSet(yearSet, year, true, wssessionId);
 			wsMessage(wssessionId, "PROGRESS: " + cumulativePercentages.get(year));
 		});
-		return;
 	}
 
 	// @formatter:off
@@ -873,33 +785,35 @@ public class DeduplicationService {
 	// @formatter:on
 	public void searchYearTwoFiles(List<Publication> publications, String wssessionId) {
 		Map<Integer, List<Publication>> yearSets = publications.stream()
-				.collect(Collectors.groupingBy(Publication::getPublicationYear));
-		Map<Integer, Integer> cumulativePercentages = new LinkedHashMap<>();
-		int current = 0;
-		Integer total = publications.size();
-		for (Integer year : yearSets.keySet()) {
-			Integer simple = yearSets.get(year).size();
-			cumulativePercentages.put(year, 100 * (simple + current) / total);
-			current += simple;
-		}
+				.collect(Collectors.groupingBy(Publication::getPublicationYear, TreeMap::new, Collectors.toList()));
+		Map<Integer, Integer> cumulativePercentages = getCumulativePercentages(publications, yearSets);
 
 		List<Publication> emptyYearlist = yearSets.remove(0);
-		log.debug("YearSets: {}", yearSets.keySet().stream().sorted().collect(Collectors.toList()));
-		yearSets.keySet().stream().sorted().forEach(year -> {
+		log.debug("YearSets: {}", yearSets.keySet().stream().toList());
+		yearSets.keySet().stream().forEach(year -> {
 			List<Publication> yearSet = new ArrayList<>();
 			if (emptyYearlist != null) {
-				yearSet.addAll(emptyYearlist.stream().filter(r -> r.getLabel() == null).collect(Collectors.toList()));
+				yearSet.addAll(emptyYearlist.stream().filter(r -> r.getLabel() == null).toList());
 			}
 			yearSet.addAll(yearSets.get(year));
-			List<Publication> nextYearSet = yearSets.get(year + 1);
-			if (nextYearSet != null) {
-				yearSet.addAll(nextYearSet);
-			}
+			yearSet.addAll(yearSets.getOrDefault(year + 1, Collections.emptyList()));
 			wsMessage(wssessionId, "Working on " + year + " for " + yearSet.size() + " records");
 			compareSet(yearSet, year, false, wssessionId);
 			wsMessage(wssessionId, "PROGRESS: " + cumulativePercentages.get(year));
 		});
-		return;
+	}
+
+	private Map<Integer, Integer> getCumulativePercentages(List<Publication> publications, Map<Integer, List<Publication>> yearSets) {
+		Map<Integer, Integer> cumulativePercentages = new LinkedHashMap<>();
+		int current = 0;
+		Integer total = publications.size();
+		for (Map.Entry<Integer, List<Publication>> year : yearSets.entrySet()) {
+			int simple = year.getValue().size();
+			cumulativePercentages.put(year.getKey(), 100 * (simple + current) / total);
+			current += simple;		
+		}
+		log.debug("cumulativePercentages: " + cumulativePercentages);
+		return cumulativePercentages;
 	}
 
 	private void wsMessage(String wssessionId, String message) {
